fix h2 sometimes wrapping when visiting the main page

--- a/modes.css
+++ b/modes.css
@@ -4,6 +4,7 @@ html body {
 	line-height: 2;
 	font-family: 'Lexend Deca', sans-serif;
 	font-weight: 300;
+	overflow: hidden;
 }
 
 #better-speedrun-timer {
@@ -36,6 +37,7 @@ html body {
 }
 
 h2 {
+	white-space: nowrap;
 	margin-bottom: 5px;
 }
 
